Integrated time picker and the keyboard navigation and fixed existing test cases.

--- a/tests/tests.html
+++ b/tests/tests.html
@@ -6,16 +6,17 @@
         <script src="assets/qunit-logging.js"></script> <!-- console.log for test failures -->
         <script src="assets/coverage.js"></script>
         <script src="assets/jquery-1.7.1.min.js"></script>
+		<script type="text/javascript" src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>
         <script src="../js/bootstrap-datepicker.js"></script>
 
         <style>
             .datepicker {
                 /* Appended to body, abs-pos off the page */
                 position: absolute;
-                display: none;
                 top: -9999em;
                 left: -9999em;
             }
+			.dropdown-menu { display:none; }
         </style>
 
         <!-- Utilities -->
