--- a/tests/tests.html
+++ b/tests/tests.html
@@ -29,6 +29,7 @@
         <script src="suites/mouse_navigation/2012.js"></script>
         <script src="suites/mouse_navigation/2011.js"></script>
         <script src="suites/keyboard_navigation/all.js"></script>
+		<script src="suites/keyboard_navigation/TimePicker.js"></script>
         <script src="suites/keyboard_navigation/2012.js"></script>
         <script src="suites/keyboard_navigation/2011.js"></script>
         <script src="suites/component.js"></script>
