--- a/tests/tests.html
+++ b/tests/tests.html
@@ -35,6 +35,7 @@
         <script src="suites/component.js"></script>
         <script src="suites/events.js"></script>
         <script src="suites/options.js"></script>
+		<script src="suites/TimePicker.js"></script>
         <script src="suites/inline.js"></script>
         <script src="suites/calendar-weeks.js"></script>
         <script src="suites/data-api.js"></script>
